--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -4,6 +4,12 @@
 
 Elaborate on your learnings here in `src/exercise/01.md`
 
+- const declaration establishes a new block-scoped local variable
+- The value of a constant can't be changed through reassignment using the
+  assignment operator, but if a constant is an object, its properties can be
+  added, updated, or removed
+- this new element can have its properties edited
+
 ## Background
 
 It doesn't take long to learn how to make "Hello World" appear on the page with
